--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,5 +11,9 @@ main {
 }
 
 button {
-  @apply inline-flex justify-center items-center w-auto px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-200 disabled:opacity-50 disabled:pointer-events-none hover:underline underline-offset-4;
+  @apply px-4 py-2 rounded min-w-60 text-center bg-blue-500  hover:bg-blue-600 focus:outline-none focus:ring-1 focus:ring-white disabled:opacity-50 disabled:pointer-events-none hover:underline underline-offset-4;
+}
+
+h1 {
+  @apply text-2xl font-bold;
 }
